<resources>
    <string name="app_name">Belajar Hangeul</string>
    <string name="backspace">\u232B</string>
    <string name="classify">CEK</string>
    <string name="draw">Tulis Hangeul</string>
    <string name="space">\u2423</string>
    <string name="submit">\u27A4</string>
    <string name="owner"><i>by Wir.Nin</i></string>
    <string name="hangeultext"><b>hangeul</b>b</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="romanzi_informal">Romanzi Informal</string>
</resources>
