<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bground"
    tools:context=".Fragment.FragmentSoundHuruf2">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="68dp"
        android:layout_height="70dp"
        android:layout_marginEnd="340dp"
        android:background="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtHangeul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="A"
            android:textColor="@color/white"
            android:textSize="16pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context=".HangulActivity"
        android:weightSum="1">


        <RelativeLayout
            android:id="@+id/paintViewLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.wirnin.hanguldetection.PaintView
                android:id="@+id/paintView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/drawHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/draw"
                android:textColor="@color/Gray"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear" />

            <Button
                android:id="@+id/buttonSpace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/space" />

            <Button
                android:id="@+id/buttonBackspace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/backspace" />

            <Button
                android:id="@+id/buttonClassify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/classify"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/textLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:clickable="false"
                android:cursorVisible="true"
                android:textCursorDrawable="@drawable/color_cursor"
                android:backgroundTint="@android:color/darker_gray"
                android:layout_weight=".85"/>

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_weight=".15"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/altLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/alt1"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:tag="1"
                android:text="" />

            <Button
                android:id="@+id/alt2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:tag="2"
                android:text="" />

            <Button
                android:id="@+id/alt3"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:tag="3"
                android:text="" />

            <Button
                android:id="@+id/alt4"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:tag="4"
                android:text="" />
        </LinearLayout>

        <TextView
            android:id="@+id/translationText"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.23"
            android:text="" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>